<resources>
    <string name="app_name">Trip Planner</string>

    <!-- Buttons -->
    <string name="new_trip_button">New Trip</string>
    <string name="photo_gallery_button">Photo Gallery</string>
    <string name="photo_map_button">Photo Map</string>
    <string name="past_trips_button">Past Trips</string>
    <string name="add_new_tag_button">Add New Tag</string>
    <string name="start_trip_button">Start Trip</string>
    <string name="finish_trip_button">Finish Trip</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_to_trip_button">Add to Trip</string>
    <string name="update_details_button">Update Details</string>
    <string name="go_back_button">Go Back</string>

    <!-- EditText & etc. Field Labels -->
    <string name="title_field_label">Title:</string>
    <string name="tags_field_label">Tags:</string>
    <string name="description_field_label">Description:</string>
    <string name="sort_field_label">Sort by:</string>
    <string name="search_field_label">Search:</string>
    <string name="temperature_field_label">Temperature:</string>
    <string name="pressure_field_label">Pressure:</string>
    <string name="start_time_field_label">Start Time:</string>
    <string name="end_time_field_label">End Time:</string>
    <string name="trip_length_field_label">Trip Length:</string>
    <string name="photos_taken_field_label">Photos Taken:</string>
    <string name="locations_visited_field_label">Locations Visited:</string>

    <!-- Titles -->
    <string name="new_trip_title">New Trip</string>
    <string name="tag_default_name">Default Tag Name</string>
    <string name="trip_default_name">Default Trip Name</string>
    <string name="trip_details_title">Trip Details</string>
    <string name="trip_information_title">Trip Information</string>

    <!-- Snackbar Messages -->
    <string name="photo_needs_title_and_description">Photo needs to have a title and a description.</string>
    <string name="photo_capture_failed_snackbar">Photo Capture Failed.</string>
    <string name="camera_initialisation_failed_snackbar">Camera initialisation failed.</string>
    <string name="permissions_granted_snackbar">Permissions granted successfully!</string>
    <string name="permissions_not_granted_snackbar">Please give required permissions to enable all functionality.</string>
    <string name="camera_missing_snackbar">Camera missing or permission not granted.</string>
    <string name="storage_missing_snackbar">Storage missing or permission not granted.</string>
    <string name="trip_cannot_start_snackbar">Trip needs to have a title.</string>
    <string name="finish_trip_before_exiting_snackbar">Finish Your Trip before exiting.</string>
    <string name="trip_finished_successfully_snackbar">Your Trip was saved!</string>
    <string name="trip_finished_unsuccessfully_snackbar">Uh oh. Your Trip did not finish correctly.</string>
    <string name="location_has_not_changed_snackbar">Location has not changed.</string>
    <string name="initialised_location_snackbar">Got Your Location!</string>
    <string name="updated_location_snackbar">Updated Location!</string>
    <string name="location_handling_unsuccessful_snackbar">Uh oh. Something weird is happening with Your Location.</string>
    <string name="cannot_write_map_snackbar">Uh oh. Cannot display on the Map.</string>
    <string name="temperature_not_available_snackbar">Temperature Sensor not Available.</string>
    <string name="pressure_not_available_snackbar">Pressure Sensor not Available.</string>
    <string name="location_missing_snackbar">Location sensor missing or permission not granted.</string>
    <string name="no_photos_snackbar">No Photos Available :(</string>
    <string name="no_trips_snackbar">No Trips Available :(</string>

    <!-- Photo Gallery  -->
    <string-array name="filter_spinner"><item>ID</item><item>Location</item><item>Tag</item></string-array>
    <string name="image_button">Sort button</string>
</resources>