<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="uk.ac.shef.oak.com4510.views.MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/new_trip_button"
                android:layout_height="70dp" android:id="@+id/activity_main_btn_new_trip"
                android:textColor="@color/main_light_blue"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="250dp"
        />
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="20dp"
        />
        <Button
                android:text="@string/photo_gallery_button"
                android:layout_height="70dp" android:id="@+id/activity_main_btn_photo_gallery"
                android:textColor="@color/main_light_blue"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="250dp"
        />
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
        />
        <Button
                android:text="@string/photo_map_button"
                android:layout_height="70dp" android:id="@+id/activity_main_btn_photo_map"
                android:textColor="@color/main_light_blue"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="250dp"
        />
        <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
        />
        <Button
                android:text="@string/past_trips_button"
                android:layout_height="70dp" android:id="@+id/activity_main_btn_past_trips"
                android:textColor="@color/main_light_blue"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="250dp"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>