<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".oak.com4510.views.MainActivity">
        <Button
                android:text="@string/go_back_button"
                android:layout_height="60dp" android:id="@+id/activity_trip_overview_btn_go_back"
                android:textColor="@color/main_light_blue"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="150dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_ll_map_holder"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="30dp"/>
        <Button
                android:text="@string/update_details_button"
                android:layout_height="60dp" android:id="@+id/activity_trip_overview_btn_update_trip"
                android:textColor="@color/main_light_blue"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="150dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_ll_map_holder"
                android:layout_marginTop="51dp" android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/activity_trip_overview_ll_map_holder"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_locations_visited"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginTop="30dp">

            <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:scrollbars="vertical"
                android:layout_margin="10dp"
                tools:layout="@layout/activity_photo_map" />
        </LinearLayout>
        <TextView
                android:text="@string/locations_visited_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:id="@+id/activity_trip_overview_tv_locations_visited"
                android:fontFamily="@font/roboto_bold" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_rv_photo_list"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_locations_visited"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_locations_visited"
                android:focusable="false"
                android:cursorVisible="false"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_trip_overview_rv_photo_list"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_photos_taken"
                android:layout_marginTop="30dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
                android:text="@string/photos_taken_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:id="@+id/activity_trip_overview_tv_photos_taken"
                android:fontFamily="@font/roboto_bold" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_trip_length"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_photos_taken"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_photos_taken"
                android:focusable="false"
                android:cursorVisible="false"/>
        <TextView
                android:text="@string/trip_length_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_trip_details2"
                android:id="@+id/activity_trip_overview_tv_trip_length"
                android:fontFamily="@font/roboto_bold"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_trip_length"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_trip_length"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"
                android:focusable="false"
                android:cursorVisible="false"/>
        <TextView
                android:text="@string/trip_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/activity_trip_overview_tv_trip_details"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                android:textColor="@color/main_colour" android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/trip_information_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/activity_trip_overview_tv_trip_details2"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                android:textColor="@color/main_colour" android:fontFamily="@font/roboto_bold"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_ll_tags_panel"/>
        <TextView
                android:text="@string/end_time_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_start_time"
                android:id="@+id/activity_trip_overview_tv_end_time"
                android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/title_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_trip_details"
                android:id="@+id/activity_trip_overview_tv_trip_title"
                android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/start_time_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_trip_title"
                android:id="@+id/activity_trip_overview_tv_start_time"
                android:fontFamily="@font/roboto_bold"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_start_time"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_start_time"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"
                android:focusable="false"
                android:cursorVisible="false"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_trip_title"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_trip_title"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/activity_trip_overview_et_end_time"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_tv_end_time"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"
                android:focusable="false"
                android:cursorVisible="false"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_overview_et_end_time"
                android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp" android:id="@+id/activity_trip_overview_ll_tags_panel">
            <include layout="@layout/tags_panel"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>