<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.MainActivity">
        <TextView
                android:text="@string/new_trip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/activity_trip_creation_tv_title"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                android:textColor="@color/main_colour" android:fontFamily="@font/roboto_bold"/>
        <TextView
                android:text="@string/title_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_creation_tv_title"
                android:id="@+id/activity_trip_creation_l_title"
                android:fontFamily="@font/roboto_bold"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/activity_trip_creation_et_title"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_creation_l_title"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:theme="@style/input_field_style"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_creation_et_title"
                android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp" android:id="@+id/activity_trip_creation_ll_tags_panel">
            <include layout="@layout/tags_panel"/>
        </LinearLayout>
        <Button
                android:text="@string/start_trip_button"
                android:layout_height="60dp" android:id="@+id/activity_trip_creation_btn_start_trip"
                android:textColor="@color/main_light_blue"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="170dp"
                android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_trip_creation_ll_tags_panel" android:layout_marginTop="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>